Multires - Crash with Simple subdivision #108034

Closed
opened 2023-05-18 07:06:54 +02:00 by Piotr Adamowicz · 2 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-17 23:33, hash: a9358f5274b6
Worked: no idea, sorry

Short description of error
Blender crashes if you press the Simple button thrice.

Exact steps for others to reproduce the error

  1. Open Blender, load factory settings.
  2. Add a Multires modifier to the default cube.
  3. Press the Simple button in the Multires modifier's panel 3 times.
  4. Blender Crashes

Note: For some reason this happens on the third click with Factory Settings, but if I just use my normal startup, it crashes on the second click, not the third.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-17 23:33, hash: `a9358f5274b6` Worked: no idea, sorry **Short description of error** Blender crashes if you press the Simple button thrice. **Exact steps for others to reproduce the error** 1. Open Blender, load factory settings. 2. Add a Multires modifier to the default cube. 3. Press the Simple button in the Multires modifier's panel 3 times. 4. Blender Crashes Note: For some reason this happens on the third click with Factory Settings, but if I just use my normal startup, it crashes on the second click, not the third.
Piotr Adamowicz added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-18 07:06:55 +02:00
Member

Can confirm on 6daa3f6b8a

91020ccde1 is bad.

3507431c30 is good. Will bisect.

crashed at static void reshape_subdiv_refine_final_P() in copy_v3_v3(r_P, grid_element.displacement);.

Can confirm on 6daa3f6b8a9b711c0697fb48f30c8c04af783c77 91020ccde15a is bad. 3507431c3064 is good. Will bisect. crashed at `static void reshape_subdiv_refine_final_P()` in `copy_v3_v3(r_P, grid_element.displacement);`.
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2023-05-18 08:27:36 +02:00
Member
Caused by 9f78530d80b051f07a7c6c90fa4754935404a9d3 @HooglyBoogly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-18 19:29:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108034
No description provided.